fixed button spacing and icon alignment

--- a/styles/modals.scss
+++ b/styles/modals.scss
@@ -9,6 +9,7 @@
   display: flex;
   width: 100%;
   margin-bottom: 15px;
+  height: 55px;
 }
 
 /* Style the form icons */
@@ -41,6 +42,7 @@
   width: 100%;
   opacity: 0.9;
   align-items: center;
+  margin: 0;
 }
 
 .btn:hover {
